Update links for Rangeland Species Searcher and monitors

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         <li class="section">BIODIVERSITY</li>
         <li><a href="https://dashboards.icraf.org/app/lesotho_rangeland_health_dashboard" target="_blank">🌾 Rangeland Health Dashboard</a></li>
         <li><a href="https://tsmafantiri.shinyapps.io/LsoAvifaunaApp/" target="_blank">🐦 Birds App – Lesotho Avifauna</a></li>
-        <li><a href="#" onclick="alert('URL not yet available'); return false;">🦌 Rangeland Species Searcher</a></li>
+        <li><a href="https://tsmafantiri.shinyapps.io/LSOEnviroApp/" target="_blank">🦌 Rangeland Species Searcher</a></li>
 
         <li class="section">CLIMATE & ENVIRONMENT</li>
-        <li><a href="#" onclick="alert('URL not yet available'); return false;">🏭 Pollution Monitor – Emissions</a></li>
-        <li><a href="#" onclick="alert('URL not yet available'); return false;">🔥 Fire Monitor – Fire Activity</a></li>
+        <li><a href="https://nifty-vault-332121.projects.earthengine.app/view/lesotho-emmissions-monitoring-app" target="_blank">🏭 Pollution Monitor – Emissions</a></li>
+        <li><a href="https://africageoportal.maps.arcgis.com/apps/instant/charts/index.html?appid=b5348bb23f83414ca6cb74533df828c6" target="_blank">🔥 Fire Monitor – Fire Activity</a></li>
       </ul>
     </nav>
 
