Change thematic menu position from left to right

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       full functionality and performance.
     </p>
     <p style="max-width:900px;">
-      Use the thematic menu on the left to explore available tools. Additional dashboards will be added
+      Use the thematic menu on the right to explore available tools. Additional dashboards will be added
       as they become available.
     </p>
   </section>
