--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       font-weight: 700;
       letter-spacing: 0.08em;
       color: #6b7280;
-      background: #f3f4f6;
+      background: #4ed81d;
     }
     nav a {
       display: block;
