--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
 
   <footer>
     © 2026 Lesotho Geospatial Dashboards | Built with HTML, CSS & JavaScript
+   <div class="social-media">
+            <a href="https://www.facebook.com/Ocaes" target="_blank">Facebook</a>
+            <a href="https://x.com/ocaes_lso" target="_blank">X</a>
+            <a href="https://heylink.me/tsitsomafantiri/" target="_blank">HeyLink.me</a></p>
+    </div>
   </footer>
 
   <script>
