--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   </div>
 
   <footer>
-    © 2026 Lesotho Geospatial Dashboards | Built with HTML, CSS & JavaScript
+    © 2026 Lesotho Geospatial Dashboards | Designed and Built by OCAES 
    <div class="social-media">
             <a href="https://www.facebook.com/Ocaes" target="_blank">Facebook</a>
             <a href="https://x.com/ocaes_lso" target="_blank">X</a>
