Change background color from light to green

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       font-weight: 700;
       letter-spacing: 0.08em;
       color: var(--text-muted);
-      background: #f3f4f6;
+      background: #4ed81d;
     }
 
     nav a {
